# endurain

./: mkdocs.yml  plan.MD
backend/: pyproject.toml
backend/app/: main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: v0_18_0_migration.py
backend/app/api_keys/: crud.py  models.py  router.py  schema.py  utils.py
backend/app/auth/: router.py  utils.py
backend/app/auth/identity_providers/: public_router.py
backend/app/core/: config.py  middleware.py  routes.py
backend/app/fit/: utils.py
backend/app/garmin/: utils.py
backend/app/mcp_module/: auth.py  prompts.py  resources.py  server.py  utils.py
backend/app/mcp_module/tools/: activities.py  gear.py  health.py  profile.py
backend/app/users/users/: models.py  schema.py
backend/tests/: test_main_mcp.py
backend/tests/api_keys/: test_crud.py  test_models.py  test_router.py  test_schema.py  test_utils.py
backend/tests/core/: test_config_mcp.py  test_middleware.py
backend/tests/mcp_module/: conftest.py  test_auth.py  test_prompts.py  test_resources.py  test_server.py  test_utils.py
backend/tests/mcp_module/tools/: test_activities.py  test_gear.py  test_health.py  test_profile.py
docker/: Dockerfile  start.sh
docs/developer-guide/: authentication.md
docs/integrations/: mcp.md
frontend/app/: package-lock.json  package.json
frontend/app/src/: main.js
frontend/app/src/components/: FooterComponent.vue
frontend/app/src/components/Settings/: SettingsApiKeysZone.vue  SettingsSideBarComponent.vue
frontend/app/src/i18n/: index.js
frontend/app/src/i18n/de/: generalItems.json  loginView.json
frontend/app/src/i18n/es/: generalItems.json  loginView.json  searchView.json
frontend/app/src/i18n/fr/: activityItems.json  emailVerificationView.json  generalItems.json  loginView.json  resetPassword.json  searchView.json  signupView.json  summaryView.json
frontend/app/src/i18n/sv/: activitiesView.json  activityItems.json  activityView.json  emailVerificationView.json  generalItems.json  loginView.json  notFoundView.json  resetPassword.json  searchView.json  signupView.json  summaryView.json  userView.json
frontend/app/src/services/: apiKeysService.js
frontend/app/src/types/: index.ts
frontend/app/src/views/: SearchView.vue  SettingsView.vue
(+127 files in other folders)
